tests/ui/imports/private-std-reexport-suggest-public.stderr
error[E0603]: module import `mem` is private
  --> $DIR/private-std-reexport-suggest-public.rs:4:14
   |
LL |     use foo::mem;
   |              ^^^ private module import
   |
note: the module import `mem` is defined here...
  --> $DIR/private-std-reexport-suggest-public.rs:8:9
   |
LL |     use std::mem;
   |         ^^^^^^^^
note: ...and refers to the module `mem` which is defined here
  --> $SRC_DIR/std/src/lib.rs:LL:COL
   |
   = note: you could import this directly
help: import `mem` through the re-export
   |
LL -     use foo::mem;
LL +     use std::mem;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0603`.
